Fixes code block alignment to text (#5313)
* Fixes code block alignment to text

* Adjusted max width

--- a/static/style.css
+++ b/static/style.css
@@ -705,9 +705,9 @@ html {
   background: var(--code-block-background-color);
   color: var(--code-block-color);
   --outdent: 0rem;
-  margin-left: calc(var(--outdent) * -1);
+  margin-left: calc(var(--outdent) * 0);
   width: calc(100% + var(--outdent) * 2);
-  max-width: calc(100% + var(--outdent) * 2);
+  max-width: calc(100% + var(--outdent) * 0);
   cursor: text;
 }
 
